Fix Date top white space in archives
In an archives list, Date component should have default space.

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -257,6 +257,10 @@ th {
   font-size: var(--font-size-small);
 }
 
+h2 + .date {
+  margin-block-start: var(--space-default);
+}
+
 .page-header > .date:first-child {
   margin-block-start: var(--space-gargantuan);
 }
